--- a/subscriber.html
+++ b/subscriber.html
@@ -67,9 +67,9 @@
             </center>
         </div>
         <div style="float: left; height:300px ; width: 14.2%; color: white; background-color: rgb(64, 64, 64); margin-left: 1%; margin-top: 5%;">
-            <img src="https://ingames.ml/ghjicon.png" style="width: 100%; height: 100%; float: left;">
+            <img src="https://ingames.ml/joy.png" style="width: 100%; height: 100%; float: left;">
             <center style="margin-top: 150%;">
-                Ghoul's Journey
+                Joy
                 <br>
                 <small>InGames</small>
             </center>
@@ -83,10 +83,11 @@
             </center>
         </div>
         <div style="float: left; height:300px ; width: 14.2%; color: white; background-color: rgb(64, 64, 64); margin-left: 1%; margin-top: 5%;">
+            <img src="https://ingames.ml/dungeononeicon.png" style="width: 100%; height: 100%; float: left;">
             <center style="margin-top: 150%;">
-                Game name
+                Dungeon One
                 <br>
-                <small>Dev Name</small>
+                <small>InGames</small>
             </center>
         </div>
         <div style="float: left; height:300px ; width: 14.2%; color: white; background-color: rgb(64, 64, 64); margin-left: 1%; margin-top: 5%;">
