--- a/cart.html
+++ b/cart.html
@@ -55,6 +55,16 @@
             </div>
         </div>
     </div>
+    
+    <div style="color: white; margin-left: 3%; margin-top: 1%; width: 50%; float: left; background-color: rgb(26, 26, 26);">
+        <div style="margin-left: 5%;">
+            <div id="Mephisto">
+                <div style="float: left; margin-top: 1%;"></div>
+                <button class="btn btn-secondary" style="float: right" onclick="removeItem(document.getElementById('mephisto'))">X</button>
+                <div style="float: right; margin-top: 1%; margin-right: 5%;"> Free </div>
+            </div>
+        </div>
+    </div>
 
     <button style="margin-top: 1%; margin-right: 50%; margin-left: 3%; float: left;" class="btn btn-primary">Proceed to payment</button>
     <script>
@@ -68,6 +78,7 @@
         document.getElementById("tds").hidden = window.localStorage.getItem("tds") == "false";
         document.getElementById("joy").hidden = window.localStorage.getItem("joy") == "false";
         document.getElementById("absolutewar").hidden = window.localStorage.getItem("absolutewar") == "false";
+        document.getElementById("mephisto").hidden = window.localStorage.getItem("mephisto") == "false";
     </script>
     <script>
         if(localStorage.getItem("username") == null){
