--- a/mephisto.html
+++ b/mephisto.html
@@ -68,7 +68,7 @@
       <p>Subscribe now!</p>
       <button onclick="window.localStorage.setItem('mephisto', 'true'); alert('Added to cart')" class="btn btn-primary"> Coming soon </button>
   </div>
-    
+    <script>
        if(localStorage.getItem("username") == null){
            document.getElementById("logout").hidden = true;
            document.getElementById("substore").hidden = true;
