--- a/logindatechecker.html
+++ b/logindatechecker.html
@@ -1,4 +1,4 @@
-You will be redirrected in a minute! We checking your subscription.
+You will be redirrected in a minute! We are checking your subscription.
 
 <script>
     var request = new XMLHttpRequest();
