--- a/cart.html
+++ b/cart.html
@@ -58,7 +58,7 @@
     
     <div style="color: white; margin-left: 3%; margin-top: 1%; width: 50%; float: left; background-color: rgb(26, 26, 26);">
         <div style="margin-left: 5%;">
-            <div id="Mephisto">
+            <div id="mephisto">
                 <div style="float: left; margin-top: 1%;">Mephisto</div>
                 <button class="btn btn-secondary" style="float: right" onclick="removeItem(document.getElementById('mephisto'))">X</button>
                 <div style="float: right; margin-top: 1%; margin-right: 5%;"> Free </div>
