--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         </center>
     </div>
     <div style="float: left; height:40% ; width: 14.2%; color: white; background-color: rgb(64, 64, 64); margin-left: 1%; margin-top: 9%;">
-        <img src="https://cdn.discordapp.com/attachments/753929151534071889/764084076083806258/breadwhales.png" style="width: 100%; height: 100%; float: left;">
+        <img src="/breadwhales.png" style="width: 100%; height: 100%; float: left;">
         <center style="margin-top: 150%;">
             Bread & Whales
             <br>
