--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <title>InGames - Games</title>
 </head>
-<body style="background-color: rgb(0, 0, 0)">
+<body style="background-color: rgb(0, 0, 0); margin-bottom: 5%">
     <style>
         .vertical-center {
             margin: 0;
