--- a/index.html
+++ b/index.html
@@ -109,10 +109,11 @@
         </center>
     </div>
     <div style="float: left; height:40% ; width: 14.2%; color: white; background-color: rgb(64, 64, 64); margin-left: 1%; margin-top: 9%;">
+        <img src="/beasthuntericon.png" style="width: 100%; height: 100%; float: left;">
         <center style="margin-top: 150%;">
-            Game name
+            Beast Hunter
             <br>
-            <small>Dev Name</small>
+            <small>InGames</small>
         </center>
     </div>
     <div style="float: left; height:40% ; width: 14.2%; color: white; background-color: rgb(64, 64, 64); margin-left: 1%; margin-top: 9%;">
