--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <title>InGames - Games</title>
 </head>
-<body style="background-color: rgb(0, 0, 0); margin-bottom: 5%">
+<body style="background-color: rgb(0, 0, 0);">
     <style>
         .vertical-center {
             margin: 0;
@@ -202,6 +202,7 @@
             <small>Dev Name</small>
         </center>
 </div>
+    <p style="margin-top: 160%; color: black">omer</p>
     <script>
         if(localStorage.getItem("username") == null){
             document.getElementById("logout").hidden = true;
