--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <a class="nav-item nav-link active" href="/about.html" tabindex="-1" aria-disabled="true">About</a>
                 <a class="nav-item nav-link active" href="/news.html" tabindex="-1" aria-disabled="true"> News</a>
                 <a class="nav-item nav-link active" href="/addgame.html">Store Submission</a>
-                <a class="nav-item nav-link active" href="/downloaderwin.zip" id="substore">Get Download Manager</a>
+                <a class="nav-item nav-link active" href="/" id="substore"></a>
                 </div>
 
             </div>
