--- a/mephisto.html
+++ b/mephisto.html
@@ -65,8 +65,8 @@
         Mephisto is a 1bit harder platform. Where you will try survive to get out of MindHell.
     </div>
     <div style="float: right; width: 150px; color: white; margin-top: 35px; margin-right: 7%; margin-bottom: 10%;">
-      <p>Subscribe now!</p>
-      <button onclick="window.localStorage.setItem('mephisto', 'true'); alert('Added to cart')" class="btn btn-primary"> Coming soon </button>
+      <p> Free </p>
+      <button onclick="window.localStorage.setItem('mephisto', 'true'); alert('Added to cart')" class="btn btn-primary"> Add to cart </button>
   </div>
     <script>
        if(localStorage.getItem("username") == null){
