--- a/joy.html
+++ b/joy.html
@@ -65,7 +65,7 @@
         Joy is a 2D adventure developed by InGames. In Joy you will go on an adventure to pursue your happiness which is constantly escaping from you. You will parkour in between the floating islands of Joy and try to escape the traps in magical forests and try to be happy again.
     </div>
     <div style="float: right; width: 150px; color: white; margin-top: 35px; margin-right: 7%; margin-bottom: 10%;">
-      <p>Free</p>
+      <p>Subscriber Content</p>
       <button onclick="window.localStorage.setItem('joy', 'true'); alert('Added to cart')" class="btn btn-primary"> Add to cart</button>
   </div>
    <script>
