--- a/tds.html
+++ b/tds.html
@@ -65,7 +65,7 @@
         The Deadly Sins is a first person shooter game developed by InGames. In The Deadly Sins you will try to save your neighbors from the dungeons of hell. You will travel through various places through the portals and secret passages. You can also play against your friends and strangers in TDS Online.
     </div>
     <div style="float: right; width: 150px; color: white; margin-top: 35px; margin-right: 7%; margin-bottom: 10%;">
-      <p>Free</p>
+      <p>Subscriber Content</p>
       <button onclick="window.localStorage.setItem('tds', 'true'); alert('Added to cart')" class="btn btn-primary"> Add to cart</button>
   </div>
    <script>
