--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         </center>
     </div>
     <div style="float: left; height:40% ; width: 14.2%; color: white; background-color: rgb(64, 64, 64); margin-left: 1%; margin-top: 9%;">
-        <img src="/woiposter.png" style="width: 100%; height: 100%; float: left;">
+        <img src="/woicon.png" style="width: 100%; height: 100%; float: left;">
         <center style="margin-top: 150%;">
             War of Infinity
             <br>
