--- a/login.html
+++ b/login.html
@@ -16,9 +16,6 @@
     </div>
 
     <script>
-        document.addEventListener('contextmenu', function(e) {
-            e.preventDefault();
-        });
         function login(){
             var username = document.getElementById("email").value;
             var email = document.getElementById("email").value;
@@ -35,7 +32,7 @@
 
                     localStorage.setItem("email", document.getElementById("email").value);
 
-                    window.location = "/logindatechecker.html";
+                    window.location = "/index.html";
                 }
                 else{
                     if(localStorage.getItem("username") != document.getElementById("email").value){
