--- a/apply.html
+++ b/apply.html
@@ -154,8 +154,8 @@
             // Instead use one of the strategies described in
             // https://stripe.com/docs/payments/checkout/fulfill-orders
             
-            successUrl: 'http://127.0.0.1:5500/payed.html',
-            cancelUrl: 'http://127.0.0.1:5500/apply.html',
+            successUrl: 'http://ingames.ml/payed.html',
+            cancelUrl: 'http://ingames.ml/apply.html',
             })
             .then(function (result) {
             if (result.error) {
