--- a/apply.html
+++ b/apply.html
@@ -114,55 +114,51 @@
     </script>
 
     <!-- Load Stripe.js on your website. -->
+<!-- Load Stripe.js on your website. -->
 <script src="https://js.stripe.com/v3"></script>
 
 <!-- Create a button that your customers click to complete their purchase. Customize the styling to suit your branding. -->
-    <center>
-        <button
-            style="color:#FFF;padding:8px 12px;border:0;border-radius:4px;font-size:1em"
-            class="btn btn-secondary"
-            id="checkout-button-price_1HgRhwCnDpjIXNnsm0j2mnTj"
-            role="link"
-            type="button"
-            >
-            Register
-        </button>
-    </center>
+<button
+  style="background-color:#6772E5;color:#FFF;padding:8px 12px;border:0;border-radius:4px;font-size:1em"
+  id="checkout-button-price_1HgT3oCnDpjIXNnsjbTYXSDy"
+  role="link"
+  type="button"
+>
+  Checkout
+</button>
 
 <div id="error-message"></div>
 
-    <script>
-        (function() {
-        var stripe = Stripe('pk_live_51Hb7H2CnDpjIXNns9NPxaM4v6uGFZ3tAv6yW12xnSIHRmdqlILequsa9N0D0cZ7hO6t5oYaQj57XYIVwfaAXEDY700oArw7tQo');
+<script>
+(function() {
+  var stripe = Stripe('pk_live_51Hb7H2CnDpjIXNns9NPxaM4v6uGFZ3tAv6yW12xnSIHRmdqlILequsa9N0D0cZ7hO6t5oYaQj57XYIVwfaAXEDY700oArw7tQo');
 
-        var checkoutButton = document.getElementById('checkout-button-price_1HgRhwCnDpjIXNnsm0j2mnTj');
-        checkoutButton.addEventListener('click', function () {
-            save();
-            // When the customer clicks on the button, redirect
-            // them to Checkout.
-
-            stripe.redirectToCheckout({
-            lineItems: [{price: 'price_1HgT3oCnDpjIXNnsjbTYXSDy', quantity: 1}],
-            mode: 'subscription',
-            // Do not rely on the redirect to the successUrl for fulfilling
-            // purchases, customers may not always reach the success_url after
-            // a successful payment.
-            // Instead use one of the strategies described in
-            // https://stripe.com/docs/payments/checkout/fulfill-orders
-            
-            successUrl: 'http://ingames.ml/payed.html',
-            cancelUrl: 'http://ingames.ml/apply.html',
-            })
-            .then(function (result) {
-            if (result.error) {
-                // If `redirectToCheckout` fails due to a browser or network
-                // error, display the localized error message to your customer.
-                var displayError = document.getElementById('error-message');
-                displayError.textContent = result.error.message;
-            }
-            });
-        });
-        })();
-    </script>
+  var checkoutButton = document.getElementById('checkout-button-price_1HgT3oCnDpjIXNnsjbTYXSDy');
+  checkoutButton.addEventListener('click', function () {
+    // When the customer clicks on the button, redirect
+    // them to Checkout.
+    stripe.redirectToCheckout({
+      save();
+      lineItems: [{price: 'price_1HgT3oCnDpjIXNnsjbTYXSDy', quantity: 1}],
+      mode: 'subscription',
+      // Do not rely on the redirect to the successUrl for fulfilling
+      // purchases, customers may not always reach the success_url after
+      // a successful payment.
+      // Instead use one of the strategies described in
+      // https://stripe.com/docs/payments/checkout/fulfill-orders
+      successUrl: 'https://ingames.ml/payed.html',
+      cancelUrl: 'https://ingames.ml/apply.html',
+    })
+    .then(function (result) {
+      if (result.error) {
+        // If `redirectToCheckout` fails due to a browser or network
+        // error, display the localized error message to your customer.
+        var displayError = document.getElementById('error-message');
+        displayError.textContent = result.error.message;
+      }
+    });
+  });
+})();
+</script>
 </body>
 </html>
