--- a/apply.html
+++ b/apply.html
@@ -118,15 +118,17 @@
 <script src="https://js.stripe.com/v3"></script>
 
 <!-- Create a button that your customers click to complete their purchase. Customize the styling to suit your branding. -->
-<button
-  style="color:#FFF;padding:8px 12px;border:0;border-radius:4px;font-size:1em"
-  id="checkout-button-price_1HgT3oCnDpjIXNnsjbTYXSDy"
-  class="btn btn-secondary"
-  role="link"
-  type="button"
->
-  Register
-</button>
+    <center>
+        <button
+          style="color:#FFF;padding:8px 12px;border:0;border-radius:4px;font-size:1em"
+          id="checkout-button-price_1HgT3oCnDpjIXNnsjbTYXSDy"
+          class="btn btn-secondary"
+          role="link"
+          type="button"
+        >
+          Register
+        </button>
+    </center>
 
 <div id="error-message"></div>
 
