--- a/location.html
+++ b/location.html
@@ -1,4 +1,4 @@
-<a href="/apply/apply.html">If not redirrected click here</a>
+<a href="/apply/apply.html">If you are not redirrected click here</a> (Redirrects can take up to a minute!)
 
 <script>
     function getLocation() {
