--- a/cart.html
+++ b/cart.html
@@ -54,6 +54,15 @@
             </div>
         </div>
     </div>
+    <div style="color: white; margin-left: 3%; margin-top: 1%; width: 50%; float: left; background-color: rgb(26, 26, 26);">
+        <div style="margin-left: 5%;">
+            <div id="dungeonone">
+                <div style="float: left; margin-top: 1%;">Dungeon One</div>
+                <button class="btn btn-secondary" style="float: right" onclick="removeItem(document.getElementById('dungeonone'))">X</button>
+                <div style="float: right; margin-top: 1%; margin-right: 5%;"> Subscriber Only </div>
+            </div>
+        </div>
+    </div>
     
     <div style="color: white; margin-left: 3%; margin-top: 1%; width: 50%; float: left; background-color: rgb(26, 26, 26);">
         <div style="margin-left: 5%;">
@@ -80,6 +89,7 @@
         document.getElementById("tds").hidden = window.localStorage.getItem("tds") == "false";
         document.getElementById("joy").hidden = window.localStorage.getItem("joy") == "false";
         document.getElementById("absolutewar").hidden = window.localStorage.getItem("absolutewar") == "false";
+        document.getElementById("dungeonone").hidden = window.localStorage.getItem("dungeonone") == "false";
         document.getElementById("mephisto").hidden = window.localStorage.getItem("mephisto") == "false";
         
         function checkout(){
@@ -94,6 +104,9 @@
             }
             if(!document.getElementById("tds").hidden){
                 alert("The Deadly Sins will be downloaded")
+            }
+            if(!document.getElementById("dungeonone").hidden){
+                alert("The Dungeon One will be downloaded")
             }
             if(!document.getElementById("joy").hidden){
                 alert("Joy will be downloaded")
