--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </div>
         
     <div style="float: left; height:40% ; width: 14.2%; color: white; background-color: rgb(64, 64, 64); margin-left: 13%; margin-top: 9%;">
-        <img src="https://ingames.ml/dungeononeicon.png" style="width: 100%; height: 100%; float: left;">
+        <img onclick="window.location = 'https://ingames.ml/dungeonone.html';" src="https://ingames.ml/dungeononeicon.png" style="width: 100%; height: 100%; float: left;">
         <center style="margin-top: 150%;">
             Dungeon One
             <br>
