--- a/dungeonone.html
+++ b/dungeonone.html
@@ -66,7 +66,7 @@
     </div>
     <div style="float: right; width: 150px; color: white; margin-top: 35px; margin-right: 7%; margin-bottom: 10%;">
       <p>Subscriber Content</p>
-      <button onclick="window.localStorage.setItem('absolutewar', 'true'); alert('Added to cart')" class="btn btn-primary"> Add to cart</button>
+      <button onclick="window.localStorage.setItem('dungeonone', 'true'); alert('Added to cart')" class="btn btn-primary"> Add to cart</button>
   </div>
    <script>
        if(localStorage.getItem("username") == null){
