--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         </center>
     </div>
     <div style="float: left; height:40% ; width: 14.2%; color: white; background-color: rgb(64, 64, 64); margin-left: 1%; margin-top: 9%;">
-        <img src="/theminericon.png" style="width: 100%; height: 100%; float: left;">
+        <img src="/theminericon.png"  onclick="window.location = 'https://ingames.ml/miner.html';" style="width: 100%; height: 100%; float: left;">
         <center style="margin-top: 150%;">
             The Miner
             <br>
