--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </center>
     </div>
     <div style="float: left; height:40% ; width: 14.2%; color: white; background-color: rgb(64, 64, 64); margin-left: 1%; margin-top: 9%;">
-        <img src="/beasthuntericon.png" style="width: 100%; height: 100%; float: left;">
+        <img onclick="window.location = 'https://ingames.ml/beast.html';" src="/beasthuntericon.png" style="width: 100%; height: 100%; float: left;">
         <center style="margin-top: 150%;">
             Beast Hunter
             <br>
