--- a/cart.html
+++ b/cart.html
@@ -56,6 +56,15 @@
     </div>
     <div style="color: white; margin-left: 3%; margin-top: 1%; width: 50%; float: left; background-color: rgb(26, 26, 26);">
         <div style="margin-left: 5%;">
+            <div id="beast">
+                <div style="float: left; margin-top: 1%;">Beast Hunter</div>
+                <button class="btn btn-secondary" style="float: right" onclick="removeItem(document.getElementById('beast'))">X</button>
+                <div style="float: right; margin-top: 1%; margin-right: 5%;"> Subscriber Only </div>
+            </div>
+        </div>
+    </div>
+    <div style="color: white; margin-left: 3%; margin-top: 1%; width: 50%; float: left; background-color: rgb(26, 26, 26);">
+        <div style="margin-left: 5%;">
             <div id="absolutewar">
                 <div style="float: left; margin-top: 1%;">Absolute War</div>
                 <button class="btn btn-secondary" style="float: right" onclick="removeItem(document.getElementById('absolutewar'))">X</button>
@@ -101,7 +110,8 @@
         document.getElementById("dungeonone").hidden = window.localStorage.getItem("dungeonone") == "false";
         document.getElementById("miner").hidden = window.localStorage.getItem("miner") == "false";
         document.getElementById("mephisto").hidden = window.localStorage.getItem("mephisto") == "false";
-        
+        document.getElementById("beast").hidden = window.localStorage.getItem("beast") == "false";
+
         function checkout(){
             
             if(!document.getElementById("mephisto").hidden){
@@ -114,6 +124,9 @@
             }
             if(!document.getElementById("tds").hidden){
                 alert("The Deadly Sins will be downloaded")
+            }
+            if(!document.getElementById("beast").hidden){
+                alert("Beast Hunter will be downloaded")
             }
             if(!document.getElementById("miner").hidden){
                 alert("The Miner will be downloaded")
