--- a/whale.html
+++ b/whale.html
@@ -7,7 +7,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Miner</title>
+    <title>Bread & Whales</title>
 </head>
 <body style="background-color: black;">
     <nav class="navbar navbar-expand-lg navbar-dark bg-transparent" style="height: 6%; background-color: rgb(0, 0, 0); color: rgb(0, 0, 0);">
