--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         if(localStorage.getItem("username") == null){
             document.getElementById("logout").hidden = true;
             document.getElementById("substore").hidden = true;
-            document.getElementById("signup").hidden = false;
+            document.getElementById("signup").hidden = true;
         }else{
             document.getElementById("logout").hidden = false;
             document.getElementById("substore").hidden = false;
