--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         });
         if(localStorage.getItem("username") == null){
             document.getElementById("logout").hidden = true;
-            document.getElementById("signup").hidden = true;
+            document.getElementById("signup").hidden = false;
         }else{
             document.getElementById("logout").hidden = false;
             document.getElementById("signup").hidden = true;
