--- a/payed.html
+++ b/payed.html
@@ -1,4 +1,4 @@
 <script>
     localStorage.setItem("payment", "true");
-    window.location = "/apply.html";
+    window.location = "/apply/apply.html";
 </script>
