--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
 
             <a class="nav-item nav-link active" style="float: right;" onclick="logout()" tabindex="-1" aria-disabled="true" id="logout">Logout</a>
             <a class="nav-item nav-link active" style="float: right;" href="/cart.html" tabindex="-1" aria-disabled="true">Cart</a>
-            <a class="nav-item nav-link active" style="float: right;" href="/apply.html" tabindex="-1" aria-disabled="true" id="signup">Sign up</a>
+            <div class="nav-item nav-link active" style="float: right;" tabindex="-1" aria-disabled="true" id="signup">
+                <a href="/apply.html">Sign up</a>
+                <a href="/login.html"> &nbsp; &nbsp; Login</a>
+            </div>
 </nav>  
         <br>
         
